package se.lexicon.em.model;

public class Boat extends Vehicle {

}
