package se.lexicon.em.model;

public class Bus extends Vehicle {

}
