package se.lexicon.em.model;

public class Car extends Vehicle {

}
