package se.lexicon.em.model;

public class Garage {

}
