package se.lexicon.em.model;

public class Motorcycle extends Vehicle {

}
