package se.lexicon.em.model;

public abstract class Vehicle {

}
