package se.lexicon.em.ui;

public class Main {

	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
