package se.lexicon.em.utilities;

public enum VehicleType {
	UNKNOWN, CAR, MOTORCYCLE, BUS, BOAT
}
